# transparencia-eleitoral-municipios

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: atualizar-dados.yml  atualizar-emendas.yml
data/raw/ibge/: estimativa_6579_2019-2025_brasil.json
docs/: app.js  index.html  style.css
docs/data/: emendas_resumo.json  meta.json
docs/data/emendas/: AC.json  AL.json  AM.json  AP.json  BA.json  CE.json  DF.json  ES.json  GO.json  MA.json  MS.json  MT.json  PA.json  PB.json  PE.json  PI.json  PR.json  RJ.json  RN.json  RO.json  RR.json  RS.json  SC.json  SE.json  TO.json
docs/data/malha/: mun_11.json  mun_12.json  mun_13.json  mun_14.json  mun_15.json  mun_16.json  mun_17.json  mun_21.json  mun_23.json  mun_24.json  mun_25.json  mun_26.json  mun_27.json  mun_28.json  mun_29.json  mun_31.json  mun_32.json  mun_33.json  mun_35.json  mun_41.json  mun_42.json  mun_43.json  mun_50.json  mun_51.json  mun_52.json  mun_53.json
docs/i18n/: en.json  pt.json
manifest/: provenance.json
src/eleitoral/: build.py  comparecimento.py  config.py  contas.py  crosswalk.py  download.py  eleitorado.py  emendas.py  emendas_federal.py  governador.py  ibge.py  indicators.py  malhas.py  orcamento.py  pisos.py  provenance.py  resultados.py  transferencia.py
tests/: test_codigos.py  test_contas.py  test_crosswalk.py  test_dados.py  test_emendas.py  test_indicators.py  test_orcamento.py  test_pisos.py
